fixed z-index of daily section

--- a/src/components/Forecast/Forecast.css
+++ b/src/components/Forecast/Forecast.css
@@ -144,6 +144,7 @@
         grid-area: week_info;
         padding: 0;
         align-self: center;
+        z-index: 0;
     }
     .forecast-container__fc-item-container {
         width: 90%;
